keystone-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: keystone
  labels:
    name: keystone
spec:
  containers:
    - name: keystone
      image: docker.io/tripleomaster/centos-binary-keystone:current-tripleo
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 5000
          protocol: TCP
      volumeMounts:
        - mountPath: /etc/keystone
          name: keystone-rw
        - mountPath: /etc/keystone-ro
          name: keystone-ro
        - mountPath: /etc/httpd-ro
          name: httpd-ro
        - mountPath: /etc/httpd
          name: httpd-rw
        - mountPath: /etc/keystone-templates
          name: keystone-templates
        - mountPath: /data
          name: data
      command:
        - /bin/sh
        - /etc/keystone-templates/startup.sh
  volumes:
    - name: keystone-rw
      emptyDir: {}
    - name: keystone-ro
      configMap:
        name: keystone-config
    - name: data
      emptyDir: {}
    - name: keystone-templates
      configMap:
        name: keystone-templates
    - name: httpd-ro
      configMap:
        name: httpd-config
    - name: httpd-rw
      emptyDir: {}
