mariadb-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mariadb
  labels:
    name: mariadb
spec:
  containers:
    - name: mariadb
      image: mariadb:10-bionic
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 3306
          protocol: TCP
      volumeMounts:
        - mountPath: /var/lib/mysql
          name: mariadb-data
      restartPolicy: Always
  volumes:
    - name: mariadb-data
      emptyDir: {}
