keystone-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keystone
spec:
  selector:
    name: keystone
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
