mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  selector:
    name: mariadb
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
