keystone-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keystone
  namespace: flocx-keystone
spec:
  host: keystone-flocx-keystone.k-apps.osh.massopen.cloud
  to:
    kind: Service
    name: keystone
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  wildcardPolicy: None
